2010-07-09  Thomas M. Hinkle  <tom@grenville>

	* src/lib/* Get rid of raise + string calls, as python 2.6
	prohibits them (patch from #2979619)

	* src/lib/recindex.py (RecIndex.make_search_dic): Look anywhere in
	text, not just at beginning. (fixes bug #3021913)

	* src/lib/reccard.py (DescriptionEditorModule.save): Remove old
	debug statements. Note to self: leaving in print statements is
	dangerous, as it can raise unicode errors and create bugs where
	all was well, as in bug #3018283

	* glade/recCardIngredientsEditor.glade: Update ingredient editor tooltip.

2010-06-07  Thomas Mills Hinkle  <tom@pebble>

	* src/lib/backends/db.py (map_type_to_sqlalchemy): Use LargeBinary type if available (sqlalchemy 0.6+)
	(RecData.get_unique_values): Fix boolean-related sqlalchemy 0.6+ bug.

	* src/lib/importers/interactive_importer.py (InteractiveImporter.label_selection):
	Fix error (we needed iter, we got mark) (patch from Jeff Spaleta)
	(InteractiveImporter.set_text): Fix logic error (remove extra
	newlines before parsing when it still matters).(patch from Jeff
	Spaleta)

	* src/lib/plugins/import_export/web_import_plugin/generic_web_importer_plugin.py (GenericWebImporter.test_url):
	Check that content_type is iterable (modified version of patch
	from Jeff Spaleta).

2010-05-19  Thomas M. Hinkle  <tom@grenville>

	* src/lib/db.py: Change name of ingredient_parser to
	parse_ingredient (following naming conventions used everyone else
	by pretty much everyone alive). Make this change throughout other
	source files.

	* src/lib/importers/generic_recipe_parser.py (RecipeParser): Fix
	unicode/regexp issue with ing_matcher

2010-03-25  Thomas M. Hinkle  <tom@grenville>

	* src/lib/backends/db.py (RecData.update_version_info): Make sure
	recipe_id doesn't already exist as a column before altering old
	databases -- apparently we were wrong about when this change was
	made.

2010-03-05  Thomas M. Hinkle  <tom@grenville>
